# job-client

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LINKEDIN.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  company_suggestion.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  company-suggestions.yml  daily-update.yml  database-backup.yml
career_page_finder/: README.md  __init__.py  career_page_finder.py  clear_career_pages.py  homepage_career_finder.py
catalog/: ats.yaml  companies.example.yaml  companies.yaml
daily_berlin_jobs/: server.py
daily_berlin_jobs/static/: app.js  index.html  (+1 more)
data/: job_changes_2025-11-04.txt  job_changes_2025-11-05.txt  job_changes_2025-11-06.txt  job_changes_2025-11-07.txt
docs/: ARCHITECTURE.md  COMPANY_CATALOG.md  DATABASE.md  PIPELINE.md  REFACTOR.md  ROADMAP.md
job_scraper/: README.md
scripts/: analyze_job_filters.py  audit_published_jobs.py  catalog.py  db.py  smoke_postgres.py
student_pipeline/: README.md  extract_keywords.py  generate_motivation.py  match_cv.py  run_pipeline.py  student_filter.py  sync_to_sheets.py
tests/: test_career_page_finder.py  test_client_storage.py  test_company_catalog.py  test_daily_berlin_jobs_server.py  test_data_controller.py  test_job_taxonomy.py  test_linkedin_daily.py  test_post_process_jobs.py  test_postgres_storage.py
web/: .vade-report  package-lock.json  package.json  tsconfig.json
(+109 files in other folders)
